fix(*): video on mobile

--- a/src/scss/sections/_index.scss
+++ b/src/scss/sections/_index.scss
@@ -176,9 +176,3 @@ pre {
 * MOBILE
 *
 */
-
-@include respond-to('small', 'max-width') {
-    video {
-        display: none;
-    }
-}
